# reco-algo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 000-prep-data.ipynb  001-features.ipynb  001-side-features.ipynb  002-negative-sample.ipynb  003-negative-sample.ipynb  003-prep-sequence.ipynb  004-negative-sample.ipynb  010-baseline-popular.ipynb  011-cf-u2u.ipynb  012-cf-i2i.ipynb  013-content-based.ipynb  014-content-based.ipynb  019-sequence-user-embedding.ipynb  020-prep-item2vec.ipynb  020-test-prep-item2vec.ipynb  023-baseline-popular.ipynb  023-embedding-store.ipynb  026-cf-u2u.ipynb  027-cf-i2i.ipynb  028-content-based.ipynb  999-cf-mock.ipynb  999-test-faiss.ipynb  cf_i2i.ipynb  cf_u2u.ipynb  content_based.ipynb  lightgcn-bpr.ipynb  lightgcn.ipynb  pytorch_mps_test.ipynb  wide_and_deep.ipynb
src/: data_prep_utils.py  embedding_store.py  id_mapper.py  loss.py  negative_sampling.py  sequence_utils.py  split.py  test_distributed.py  test_lightning.py  train_utils.py  vector_search.py  viz.py
src/dataset_loader/: __init__.py  item_sequence.py  item_sequence_pairwise.py  user_item_rating.py  user_item_rating_df.py  user_item_rating_pairwise.py  user_item_rating_pairwise_full.py  user_item_rating_pairwise_halfseen.py
src/eval/: __init__.py  log_metrics.py  plot_training.py  utils.py
src/model/: __init__.py  cf_i2i.py  cf_u2u.py  content_based.py  lightgcn.py  linear_regression.py  mf.py  sequence.py  sequence_gru.py  sequence_user.py  two_tower.py  wide_and_deep.py
src/skipgram/: dataset.py  model.py
