[tool.poetry]
name = "reco-algo"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quy.dinh3195@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
pandas = "^2.2.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
datasets = "^2.21.0"
plotly = "^5.24.0"
pydantic = "^2.9.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
